--- a/index.html
+++ b/index.html
@@ -135,6 +135,27 @@
       color: var(--Medium_Grey);
     }
 
+    @media (max-width:650px){
+
+      body{
+      height: 100%;
+      width: 100%;
+    }
+
+      .ratingCard{
+      padding: 1.5rem;
+      margin: 1rem;
+      width: 100%;
+      height: 100%;
+      border-radius: 30px;
+    }
+
+    .ratingCard__title{
+      font-size: 22px;
+      
+    }
+  
+
   </style>
 </head>
 <body>
@@ -156,7 +177,7 @@
       </p>
 
       <div class="ratingCard__ratings">
-        <div class="rating active" data-rating="1">1</div>
+        <div class="rating" data-rating="1">1</div>
         <div class="rating" data-rating="2">2</div>
         <div class="rating" data-rating="3">3</div>
         <div class="rating" data-rating="4">4</div>
@@ -172,8 +193,8 @@
       <p class="submitCard__selectedRating"></p>
       <h2 class="submitCard__title">Thank you!</h2>
       <p class="submitCard__desc">
-        We apperciate you taking the time to give a rating <br>
-        If you ever need more support, dont hesitate to <br>
+        We apperciate you taking the time to give a rating
+        If you ever need more support, dont hesitate to 
         get in touch!
       </p>
     </div>
