--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .ratingCard{
       display: block;
       background-color: #262F38;
-      width: 350px;
+      max-width: 350px;
       height: auto;
       padding: 2rem;
       border-radius: 30px;
@@ -109,7 +109,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 350px;
+      max-width: 350px;
       height: auto;
       background-color: #262F38;
       padding: 30px;
@@ -135,15 +135,12 @@
     @media (max-width:650px){
 
       body{
-      height: 100%;
       width: 100%;
     }
 
-      .ratingCard{
+      .ratingCard,.submitCard{
       padding: 1.5rem;
       margin: 1rem;
-      width: 100%;
-      height: 100%;
       border-radius: 30px;
     }
 
